<resources>
    <!-- Login and Register -->
    <string name="app_name">My Itinerary</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="c_password">Confirm Password</string>
    <string name="f_password">Forgot Password</string>
    <string name="string_register">string_register</string>

    <string name="reset_password">Reset Password</string>

    <!-- My Itineraries -->
    <string name="my_itineraries">My Itineraries</string>

    <!-- Nav Menu -->
    <string name="shared">Shared</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_itineraries">Itineraries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Itineraries">Itineraries</string>
    <string name="menu_shared">Shared with Me</string>
    <string name="menu_profile">Profile</string>

    <!-- Profile Page -->
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="update_password">Update Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="home_city">Home City</string>
    <string name="bio">Bio</string>

    <!-- Create new Itinerary -->
    <string name="new_itinerary">New Itinerary</string>
    <string name="description">Description</string>
    <string name="create">Create</string>

    <!-- Itinerary Page -->
    <string name="itinerary_name">Itinerary Name</string>
    <string name="new_event">New Event</string>
    <string name="activity_event">Activity</string>
    <string name="travel_event">Travel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="sairport">Starting Airport</string>
    <string name="ending_airport">Ending Airport</string>
</resources>