<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/book"
            android:title="@string/my_itineraries"
            android:color="@color/white" />
        <item
            android:id="@+id/nav_shared"
            android:icon="@drawable/shared"
            android:title="@string/shared"
            android:color="@color/white"
        />
        <item
            android:id="@+id/nav_profile"
            android:color="@color/white"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
    </group>
</menu>