<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".ProfileFragment" >

    <Button
        android:id="@+id/updateProfileBtn"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/tertiary"
        android:fontFamily="@font/roboto"
        android:text="@string/update_password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordConfirmProfile"
        app:rippleColor="#FFFFFF"
        tools:text="@string/update_password" />

    <Button
        android:id="@+id/updateProfileBtn2"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/tertiary"
        android:fontFamily="@font/roboto"
        android:text="@string/update_profile"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBio"
        app:rippleColor="#FFFFFF"
        tools:text="@string/update_profile" />

    <EditText
        android:id="@+id/editEmailProfile"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/email"
        android:inputType="none"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPasswordProfile"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <EditText
        android:id="@+id/editPasswordConfirmProfile"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/new_password_confirm"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordProfile" />

    <EditText
        android:id="@+id/editHomeCity"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/home_city"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileText" />

    <EditText
        android:id="@+id/editBio"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:maxLines="4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/bio"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHomeCity" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editPasswordProfile"
        app:layout_constraintTop_toBottomOf="@+id/editEmailProfile"
        tools:text="@string/password" />

    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/profile"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/updateProfileBtn"
        tools:text="@string/profile" />
</androidx.constraintlayout.widget.ConstraintLayout>